<?php

use Illuminate\Database\Migrations\Migration;
use Illuminate\Database\Schema\Blueprint;
use Illuminate\Support\Facades\Schema;

return new class extends Migration
{
    /**
     * Run the migrations.
     *
     * @return void
     */
    public function up()
    {
        Schema::create('fasilitas_kamars', function (Blueprint $table) {
            $table->id();
            $table->foreignId('kamar_id')
                ->constrained('kamars')
                ->onUpdate('cascade')
                ->onDelete('cascade');
            $table->string('nama_fasilitas_kamar');
            //$table->timestamps();
        });
    }

    /**
     * Reverse the migrations.
     *
     * @return void
     */
    public function down()
    {
        Schema::dropIfExists('fasilitas_kamars');
    }
};
